Added API Route Parameter für show repeated
